--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ button {
   border-radius: 100%;
   border-style: solid;
   border-color: gray;
-  font-size: 1.5em;
+  font-size: 2vw;
   font-family: lobster;
   color: black;
   background-color: #E3E3E3;
